fix agenda detail

--- a/templates/agenda/agenda_detail_snippet.html
+++ b/templates/agenda/agenda_detail_snippet.html
@@ -1,5 +1,5 @@
-{% if agenda.content %}
-            <p>{{ object.content }}</p>
-        {% else %}
-            <p>No entry in agenda!</p>
+{% if object.content %}
+    <p>{{ object.content }}</p>
+{% else %}
+    <p>No entry in agenda!</p>
 {% endif %}
