add agenda in admin

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,3 +1,8 @@
+<!-- TO DO
+        GROUP LINKS IN SUBMENUS
+                SETTINGS: edit profile, change password, logout
+                ADD AN IF BLOCK FOR NON LOGGED IN USERS.-->
+
 {% load static %}
 
 <!DOCTYPE html>
@@ -37,7 +42,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Show Calendar</a>
+                    <a href="#" class="nav-link">Calendar</a>
                 </li>
 
                 <li class="nav-item">
