--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
     <title>{% block title %}Agenda{% endblock %}</title>
     <style>
-        h1 {color: red}
+        h1 {color: dodgerblue}
     </style>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
