--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Hello Welcome Home! {{ name }}</h1>
+    <center>
+        <h1>Hello Welcome Home! {{ name }}</h1>
+    </center>
 {% endblock %}
 
 
