--- a/templates/agenda/agenda_list.html
+++ b/templates/agenda/agenda_list.html
@@ -21,9 +21,9 @@ Agendas - {{ block.super }}
     {% for object in object_list %}
         <div>
             <a href="/agenda/{{ object.id }}"><h3 style="color: dodgerblue">"{{ object.title }}"</h3></a>
-                Created by: <a href="/">{{ object.user }} </a>
+                Created by: <a href="{%url 'profile' object.user %}">{{ object.user }} </a>
             <br><br>
-        {% include 'agenda/agenda_detail_snippet.html' with product=object %}
+        {% include 'agenda/agenda_detail_snippet.html' with agenda=object %}
         </div>
     {% endfor %}
 
