--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -55,7 +55,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="{%url 'view agendas'%}" class="nav-link">Change Password</a>
+                        <a href="{%url 'password_change'%}" class="nav-link">Change Password</a>
                     </li>
 
                     <li class="nav-item">
