--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <center>
-        <h1>Hello Welcome Home! {{ name }}</h1>
+        <h1>Welcome to Django Agenda!</h1>
     </center>
 {% endblock %}
 
