--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -55,7 +55,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="{%url 'view agendas'%}" class="nav-link">Edit Profile</a>
+                        <a href="{%url 'profile_edit' request.user%}" class="nav-link">Edit Profile</a>
                     </li>
 
                     <li class="nav-item">
