--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -43,6 +43,10 @@
                     </li>
 
                     <li class="nav-item">
+                        <a href="{%url 'view users'%}" class="nav-link">Other Users</a>
+                    </li>
+
+                    <li class="nav-item">
                         <a href="{%url 'create agenda'%}" class="nav-link">Add Entry</a>
                     </li>
 
