--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -47,7 +47,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="{%url 'view agendas'%}" class="nav-link">Calendar</a>
+                        <a href="{%url 'calendar view'%}" class="nav-link">Calendar</a>
                     </li>
 
                     <li class="nav-item">
