--- a/templates/agenda/agenda_calendar_view.html
+++ b/templates/agenda/agenda_calendar_view.html
@@ -9,33 +9,43 @@
       <script src="{% static 'js/fullcalendar.main.min.js' %}"></script>
 
       <script>
-        function draw({{object_list}}) {
-            document.addEventListener('DOMContentLoaded', function() {
-                var calendarEl = document.getElementById('calendar');
-                var calendar = new FullCalendar.Calendar(calendarEl, {
-                    initialView: 'dayGridMonth',
-                    initialDate: '2021-06-07',
-                    headerToolbar: {
-                        left: 'prev,next today',
-                        center: 'title',
-                        right: 'dayGridMonth,timeGridWeek,timeGridDay'
+        document.addEventListener('DOMContentLoaded', function() {
+            let calendarEl = document.getElementById('calendar');
+
+            let calendar = new FullCalendar.Calendar(calendarEl, {
+                initialView: 'dayGridMonth',
+                aspectRatio:  2,
+                headerToolbar: {
+                left: 'prev,next today',
+                center: 'title',
+                right: 'dayGridMonth,timeGridWeek,timeGridDay'
+              },
+
+              events: [
+                  {% for agenda in agenda_list%}
+                    {
+                        title: '{{agenda.title}}',
+                        start: '{{ agenda.entry_date }}',
+                        end: '{{ agenda.entry_date }}',
+                        rendering: 'background',
+                        {% if agenda.public == True %}
+                            color: '#378006',
+                        {% else %}
+                            color: '#6495ED',
+                        {% endif %}
                     },
-                    events: {{object_list}}
-                });
-                calendar.render();
-            })}
+                  {% endfor %}
+              ],
+            eventRender: function(event, element) {
+            element.css("font-size", "1.2em");
+            element.css("padding", "5px");
+}
+            });
 
-        function render_agendas(){
-            {{ object_list }}.forEach(agenda_obj => {
-                render
-            })
-        }
-
-
+            calendar.render();
+        });
     </script>
 
   </head>
-  <body onload="draw({{ object_list }});">
     <div id='calendar'></div>
-  </body>
 </html>
