--- a/templates/agenda/agenda_calendar_view.html
+++ b/templates/agenda/agenda_calendar_view.html
@@ -17,19 +17,19 @@
                     public: {
                         theme: 'true',
                         text: 'public',
-                        bootstrapFontAwesome: '#378006',
+                        color: '#378006',
                     },
                     private: {
                         theme: 'true',
                         text: 'private',
-                        bootstrapFontAwesome: '#6495ED',
+                        color: '#6495ED',
                     },
             },
 
                     initialView: 'dayGridMonth',
                     aspectRatio:  2,
                     headerToolbar: {
-                    left: 'prev, next today public private',
+                    left: 'prev,next today public private',
                     center: 'title',
                     right: 'dayGridMonth,timeGridWeek,timeGridDay'
               },
